test/sema/return-value-in-void-function.delta
// RUN: %check_errors %not %delta -typecheck %s

void foo(int a, int b) {
    // CHECK: [[@LINE+1]]:5: error: mismatching return type 'int', expected 'void'
    return a * b;
}
